# internal/models/auth.go
@@ -1,0 +1,6 @@
+package models
+
+type LoginRequest struct {
+    Username string `json:"username" example:"johndoe"`
+    Password string `json:"password" example:"password123"`
+}
